# scsitools

./: README.md  fsck.py  pack.py  pyproject.toml  pytest.ini  scsiformat.py  test_scsitools.py  unpack.py
.github/workflows/: test.yml
data/: AUTOEXEC.BAT  HUMAN.SYS
scsitools/: pack.py  unpack.py
scsitools/data/: COMMAND.X  FILE.TXT
