[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "scsitools"
version = "0.1.0"
description = "X68000 SxSI disk image tools"
requires-python = ">=3.8"

[project.scripts]
scsiformat = "scsitools.scsiformat:main"
scsifs = "scsitools.fsck:main"
scsipack = "scsitools.pack:main"
scsiunpack = "scsitools.unpack:main"

[tool.setuptools.packages.find]
include = ["scsitools*"]

[tool.setuptools.package-data]
scsitools = ["data/*"]
